--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,10 @@ npm-debug.log*
 build/Release
 # Dependency directories
 node_modules/
-
+# dotenv environment variable files
+.env
+.env.*
+!.env.example
 out
 dist
 # Stores VSCode versions used for testing VSCode extensions
